# user-wallets-api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GITHUB_SETUP.md  Makefile  README.md  SUMMARY.md  alembic.ini  docker-compose.yml  entrypoint.sh  manual_test.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  services.py
app/api/: wallets.py
migrations/: env.py
migrations/versions/: 001_create_wallets.py
tests/: conftest.py  test_wallets.py
